force-app/main/default/objects/PHSS_User_Provisioning__c/PHSS_User_Provisioning__c.object-meta.xml
<CustomObject>
    <label>PHSS User Provisioning</label>
    <nameField>
        <displayFormat>PHSS-UP-{000000}</displayFormat>
        <label>PHSS User Provisioning Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PHSS User Provisioning</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>