force-app/main/default/objects/PHSS_User_Provisioning__c/fields/CR_Admin__c.field-meta.xml
<CustomField>
    <fullName>CR_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CR Admin</label>
    <type>Checkbox</type>
</CustomField>