force-app/main/default/objects/PHSS_User_Provisioning__c/fields/Marked_as_Resource__c.field-meta.xml
<CustomField>
    <fullName>Marked_as_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked as Resource</label>
    <type>Checkbox</type>
</CustomField>