force-app/main/default/objects/PHSS_User_Provisioning__c/fields/SABA_Person_Number__c.field-meta.xml
<CustomField>
    <fullName>SABA_Person_Number__c</fullName>
    <externalId>true</externalId>
    <label>SABA Person Number</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>